fix topbar logo alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,6 +98,7 @@ body {
 
 a {
   color: inherit;
+  display: inherit;
   text-decoration: none;
 }
 
